Added social media links and images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="about.html" >About</a></li>
             <li><a href="projects.html" >Projects</a></li>
             <li><a href="contact.html" >Contact</a></li>
-            <li><a href="cv/resume.pdf" class="accent-link">Download CV</a></li>
+            <li><a href="cv/General Resume.pdf" class="accent-link">Download CV</a></li>
         </ul>
     </nav>
 
@@ -44,7 +44,7 @@
                 <h2>Web Developer</h2>
                 <p>I design and build beautiful, responsive websites. Passionate about Backend development,UI/UX and turning ideas into digital reality.</p>
                 <div class="social-icons">
-                    <a href="" arial-label="Email">
+                    <a href="https://www.linkedin.com/in/joe-dev-81a32a293/" arial-label="Email">
                         <img src="images/linkedin.png" alt="linkedin" width="30px">
                     </a>
                     <a href="https://github.com/Joe21-dev" arial-label="Email">
@@ -178,7 +178,7 @@
         <div class="carousel" id="testimonialCarousel">
           <div class="testimonial-card">
             <div class="avatar">
-              <img src="images/c63bb705a60ba8755279f9f368c0e311.jpg" alt="">
+              <img src="images/alice.jpg" alt="">
             </div>
             <p class="quote">
               “This platform has changed the way I feel safe about my online business. Highly recommended!”
@@ -189,7 +189,7 @@
 
           <div class="testimonial-card">
             <div class="avatar">
-              <img src="images/c63bb705a60ba8755279f9f368c0e311.jpg" alt="">
+              <img src="images/mariana.jpg" alt="">
             </div>
             <p class="quote">
               “An innovative mind much needed in today’s world. Excellent design and usability.”            </p>
@@ -199,7 +199,7 @@
 
           <div class="testimonial-card">
             <div class="avatar">
-              <img src="images/c63bb705a60ba8755279f9f368c0e311.jpg" alt="">
+              <img src="images/sally.jpg" alt="">
             </div>
             <p class="quote">
               “Intuitive, fast, and beautifully crafted. It's a model of modern web design.”            </p>
@@ -274,7 +274,7 @@
                 <ul>
                     <li><a href="#" class="social-icon"><img src="images/facebook.png" alt="facebook" width="30px"></a></li>
                     <li><a href="#" class="social-icon"><img src="images/whatsapp.png" alt="whatsapp" width="30px"></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/instagram.png" alt="instagram" width="30px"></a></li>
+                    <li><a href="https://www.instagram.com/joe21_dev/?hl=en" class="social-icon"><img src="images/instagram.png" alt="instagram" width="30px"></a></li>
                     <li><a href="#" class="social-icon"><img src="images/linkedin.png" alt="linkedin" width="30px"></a></li>
                     <li><a href="#" class="social-icon"><img src="images/github.png" alt="github" width="30px"></a></li>
                     <li><a href="#" class="social-icon"><img src="images/x.png" alt="x(twitter)" width="30px"></a></li>
