--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
                     <img src="images/newspaper.jpeg" alt="Project 3">
                     <div class="project-info">
                         <h3>JamiiYetu</h3>
-                        <p>Interactive web app for community social activituies built with HTML,CSS,Js and Django</p>
+                        <p>Interactive web app for community social activities built with HTML,CSS,Js and Django</p>
                         <a href="#" onclick="redirectWithLoading('project5.html', 2500)" class="cta-btn">View Project</a>
                     </div>
                 </div>
