--- a/about.html
+++ b/about.html
@@ -86,12 +86,11 @@
             <div class="footer-section social-media">
                 <h3>Follow Us</h3>
                 <ul>
-                    <li><a href="#" class="social-icon"><img src="images/facebook.png" alt="facebook" width="30px"></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/whatsapp.png" alt="whatsapp" width="30px"></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/instagram.png" alt="instagram" width="30px"></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/linkedin.png" alt="linkedin" width="30px"></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/github.png" alt="github" width="30px"></a></li>
-                    <li><a href="#" class="social-icon"><img src="images/x.png" alt="x(twitteer)" width="30px"></a></li>
+                    <li><a href="#" onclick="openWhatsApp()" class="social-icon" ><img src="images/whatsapp.png" alt="whatsapp" width="30px"></a></li>
+                    <li><a href="https://www.instagram.com/joe21_dev/?hl=en" class="social-icon"><img src="images/instagram.png" alt="instagram" width="30px"></a></li>
+                    <li><a href="https://www.linkedin.com/in/joe-dev-81a32a293/" class="social-icon"><img src="images/linkedin.png" alt="linkedin" width="30px"></a></li>
+                    <li><a href="https://github.com/Joe21-dev" class="social-icon"><img src="images/github.png" alt="github" width="30px"></a></li>
+                    <li><a href="https://x.com/joedsmith2550" class="social-icon"><img src="images/x.png" alt="x(twitter)" width="30px"></a></li>
 
                 </ul>
             </div>
