--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- nav-links -->
             <li><a href="index.html" class="active-link" >Home</a></li>
             <li><a href="about.html" >About</a></li>
-            <li><a href="projects.html" >Projects</a></li>
+            <li><a href="#projects" >Projects</a></li>
             <li><a href="contact.html" >Contact</a></li>
             <li><a href="cv/General Resume.pdf" class="accent-link">Download CV</a></li>
         </ul>
