--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html" >Projects</a></li>
             <li><a href="contact.html" class="active-link">Contact</a></li>
-            <li><a href="cv/resume.pdf" class="accent-link">Download CV</a></li>
+            <li><a href="cv/General Resume.pdf" class="accent-link">Download CV</a></li>
         </ul>
     </nav>
     </header>
@@ -65,8 +65,7 @@
     
     </div>
     </main>
-
-    <footer class="footer">
+  <footer class="footer">
         <div class="footer-container">
             <!-- Left Section: Quick Links -->
             <div class="footer-section">
@@ -82,8 +81,8 @@
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <li>Email: support@21-dev.com</li>
-                <li>Phone: +254 7456 7890</li>
-                <li>Address: Othaya, Nairobi, Kenya</li>
+                <li>Phone: +254 721 260 656</li>
+                <li>Address: Othaya-Nairobi, Kenya</li>
             </div>
 
             <!-- Right Section: Social Media Icons -->
@@ -102,10 +101,9 @@
 
         <!-- Footer Bottom Section -->
         <div class="footer-bottom">
-            <p>&copy; 2025 21-dev.All Rights Reserved</p>
+            <p>&copy; 2025 <strong>21-dev</strong>.All Rights Reserved</p>
         </div>
     </footer>
-
 
     <script src="index.js" defer></script>
 
