--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
             <li><a href="about.html" >About</a></li>
             <li><a href="projects.html" class="active-link" >Projects</a></li>
             <li><a href="contact.html" >Contact</a></li>
-            <li><a href="cv/resume.pdf" class="accent-link">Download CV</a></li>
+            <li><a href="cv/General Resume.pdf" class="accent-link">Download CV</a></li>
         </ul>
     </nav>
 
@@ -115,8 +115,7 @@
         </div>
     </section>
     </main>
-
-    <footer class="footer">
+ <footer class="footer">
         <div class="footer-container">
             <!-- Left Section: Quick Links -->
             <div class="footer-section">
@@ -132,8 +131,8 @@
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <li>Email: support@21-dev.com</li>
-                <li>Phone: +254 7456 7890</li>
-                <li>Address: Othaya, Nairobi, Kenya</li>
+                <li>Phone: +254 721 260 656</li>
+                <li>Address: Othaya-Nairobi, Kenya</li>
             </div>
 
             <!-- Right Section: Social Media Icons -->
@@ -152,7 +151,7 @@
 
         <!-- Footer Bottom Section -->
         <div class="footer-bottom">
-            <p>&copy; 2025 <strong>21-dev.</strong>All Rights Reserved</p>
+            <p>&copy; 2025 <strong>21-dev</strong>.All Rights Reserved</p>
         </div>
     </footer>
 
